# traffic-system-formal-verification

./: .gitignore  IMPLEMENTATION_GUIDE.txt  PHASE_C_VERIFICATION.txt  README.md
infra/: pyproject.toml  readme.md  run_simulation.sh
infra/tests/: test_checks.py  test_congestion.py  test_depots.py  test_geometry.py  test_light_control.py  test_protocol.py
infra/traffic_infra/: __init__.py  __main__.py  depots.py  igroupsim.py  integrated_simulation.py  light_control.py  protocol.py  simulation.py  stub_vehicle.py  viz_session.py
infra/traffic_infra/static/: index.html  viz.css  viz.js
infra/traffic_system_infra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spin/: SPIN_GUIDE.md  example_safe.pml  example_unsafe.pml  example_unsafe.pml.trail  pan
spin/i_group/: README.txt  phase_c_i_group_safe.pml  phase_c_i_group_unsafe.pml  run_phase_c_checks.sh
spin/i_group/output/phase_c/: i_group_safe_car0_visits_all.txt  i_group_safe_car1_visits_all.txt  i_group_safe_no_collision.txt  i_group_safe_no_red_light.txt  i_group_safe_no_uturn.txt  i_group_safe_no_wrong_way.txt  i_group_unsafe_no_collision.txt  i_group_unsafe_no_red_light.txt
spin/output/: example_safe_no_collision.txt  example_safe_no_red_light.txt  example_unsafe_no_collision.txt  example_unsafe_no_red_light.txt
spin/v_group/: README.txt  phase_c_v_group_safe.pml  phase_c_v_group_unsafe.pml  phase_c_v_group_unsafe.pml.trail  run_phase_c_v_group_checks.sh
vehicle/: README.md  pyproject.toml
vehicle/tests/: test_fleet.py  test_integration.py  test_network.py  test_routing.py  test_vehicle.py  test_verifier.py
vehicle/traffic_infra/: checks.py
vehicle/traffic_infra/static/: simulation.html
vehicle/traffic_system_vgroup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vehicle/traffic_vehicles/: __init__.py  __main__.py  constants.py  fleet.py  network.py  protocol.py  routing.py  simulation.py  step.py  vehicle.py  verifier.py
